fixed the bug where newsletter button gets hidden if any accordion is open on mobile nav

--- a/source/sass/components/primary-nav.scss
+++ b/source/sass/components/primary-nav.scss
@@ -245,17 +245,33 @@
       left: 0;
       right: 0;
       overflow-y: auto;
-      height: 100vh;
-      transition: all 0.5s;
+      transition:
+          opacity 0.2s,
+          height 0.5s;
 
       &.hidden {
-        height: 0;
+        opacity: 0;
         overflow: hidden;
 
         .nav-links {
           a {
             transform: translateY(8px);
           }
+        }
+      }
+
+      .new-nav-enabled & {
+        top: 61px;
+        height: calc(100vh - 61px);
+
+        @media screen and (min-width: $bp-md) {
+          top: 69px;
+          height: calc(100vh - 69px);;
+
+        }
+
+        &.hidden {
+          height: 0;
         }
       }
 
